--- a/AC Career Mode/App.xaml
+++ b/AC Career Mode/App.xaml
@@ -2,8 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:AC_Career_Mode"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Login.xaml">
     <Application.Resources>
          
     </Application.Resources>
+
+    
 </Application>
+    
+    
