--- a/AC Career Mode/Login.xaml
+++ b/AC Career Mode/Login.xaml
@@ -23,13 +23,13 @@ Topmost="true" Title="Login" Width="400" Height="250" ResizeMode="NoResize"
             <RowDefinition Height="45"/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
-        <Label Grid.Column="2" Content="List" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Height="30" Width="219" FontSize="16"/>
+        <Label Grid.Column="2" Content="Profiles" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Height="30" Width="219" FontSize="16"/>
         <Label Content="Create" HorizontalAlignment="Center" VerticalAlignment="Center" Height="30" Width="154" FontSize="16" Grid.Column="1" Grid.Row="1"/>
 
         <TextBox x:Name="tb_Name" Grid.Column="1" Margin="10,10,10,10" Grid.Row="2" TextWrapping="Wrap" Text="TextBox"/>
-        <ListBox x:Name="lb_Players"  Grid.Column="2"  Grid.Row="2" Grid.RowSpan="3" Margin="0,0,10,0"/>
+        <ListBox x:Name="lb_Players"  Grid.Column="2"  Grid.Row="2" Grid.RowSpan="3" Margin="0,0,10,0" MouseDoubleClick="double_click_player"/>
         
         <Button Grid.Column="1" Content="Refresh List"  Grid.Row="4" Margin="10,10,10,10" Click="Button_Click_1" />
-        <Button Grid.Column="1" Content="Add Person" Grid.Row="3" Margin="10,10,10,10" Click="Button_Click" />
+        <Button Grid.Column="1" Content="Create Profile" Grid.Row="3" Margin="10,10,10,10" Click="Button_Click" />
     </Grid>
 </Window>
