--- a/AC Career Mode/MainWindow.xaml
+++ b/AC Career Mode/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AC_Career_Mode"
         mc:Ignorable="d"
-        Title="MainWindow" Height="520" Width="680">
+        Title="MainWindow" Height="520" Width="680" MinHeight="520" MinWidth="680">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"/>
@@ -22,16 +22,15 @@
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
-                        <ColumnDefinition Width="280"/>
+                        <ColumnDefinition Width="200"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="10"/>
+                        <RowDefinition Height="30"/>
                         <RowDefinition/>
                         <RowDefinition Height="40"/>
                     </Grid.RowDefinitions>
 
-                    <ListView x:Name="lv_RaceLst" SelectionMode="Single" Grid.Row="2" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="0,6,5,10" SelectionChanged="selection_changed" >
+                    <ListView x:Name="lv_RaceLst" SelectionMode="Single" Grid.Row="1" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,6,5,10" SelectionChanged="selection_changed" Grid.RowSpan="2" >
                         <ListView.View>
                             <GridView>
 
@@ -71,10 +70,10 @@
 
                     <!--<ListBox x:Name="lb_RaceLst" Grid.Row="2" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="0,6,5,10" SelectionChanged="selection_changed"/>-->
 
-                    <Image x:Name="track_background" Grid.Column="1"  Grid.Row="2" Margin="2,6,2,0" VerticalAlignment="Top" Height="160" />
-                    <Image x:Name="track_preview" Grid.Column="1"  Grid.Row="2" Margin="2,6,2,0" VerticalAlignment="Top" Height="160" />
-                    <Image x:Name="car_preview" Grid.Column="1"  Grid.Row="2" Margin="2,0,2,10" Height="160" VerticalAlignment="Bottom" />
-                    <Button x:Name="b_goracing" IsEnabled="False" Content="Race!" Grid.Row="3" Grid.ColumnSpan="2" Click="b_goracing_Click" />
+                    <Image x:Name="track_background" Grid.Column="1"  Grid.Row="1" Margin="2,6,2,0" VerticalAlignment="Top" Height="100" />
+                    <Image x:Name="track_preview" Grid.Column="1"  Grid.Row="1" Margin="2,6,2,0" Height="100" VerticalAlignment="Top" />
+                    <Image x:Name="car_preview" Grid.Column="1"  Grid.Row="1" Margin="2,115,2,0" Height="100" VerticalAlignment="Top" />
+                    <Button x:Name="b_goracing" IsEnabled="False" Content="Race!" Grid.Row="2" Click="b_goracing_Click" Grid.Column="1" />
 
                 </Grid>
 
@@ -115,8 +114,8 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <Image x:Name="img_forsalecar" Grid.Column="1"  Margin="2,6,2,0" VerticalAlignment="Top" Height="160" />
-                    <Button Grid.Column="1" Content="Buy" IsEnabled="False" Grid.Row="1"/>
+                    <Image x:Name="img_forsalecar" Grid.Column="1"  Margin="2,10,2,0" VerticalAlignment="Top" Height="100" />
+                    <Button x:Name="b_BuyCar" Grid.Column="1" Content="Buy" IsEnabled="False" Grid.Row="1" Click="b_BuyCar_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Profile">
