--- a/AC Career Mode/MainWindow.xaml
+++ b/AC Career Mode/MainWindow.xaml
@@ -27,13 +27,13 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="30"/>
                         <RowDefinition/>
-                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="30"/>
                     </Grid.RowDefinitions>
 
-                    <ListView x:Name="lv_RaceLst" SelectionMode="Single" Grid.Row="1" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,6,5,0" SelectionChanged="selection_changed" Grid.RowSpan="2" >
+                    <ListView x:Name="lv_RaceLst" SelectionMode="Single" Grid.Row="1" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="0,6,5,0" SelectionChanged="selection_changed" Grid.RowSpan="2" >
                         <ListView.View>
                             <GridView>
-                                
+
                                 <GridViewColumn Width="150" DisplayMemberBinding="{Binding Car.Name}">
                                     <GridViewColumn.Header>
                                         <GridViewColumnHeader Tag="Car" Click="GridViewColumnHeaderClickedHandler">Car</GridViewColumnHeader>
@@ -85,13 +85,14 @@
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
-                        <ColumnDefinition Width="210"/>
+                        <ColumnDefinition Width="200"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="30"/>
                         <RowDefinition/>
                         <RowDefinition Height="30"/>
                     </Grid.RowDefinitions>
-                    <ListView x:Name="lv_car_sale" SelectionMode="Single"  d:ItemsSource="{d:SampleData ItemCount=5}"  Grid.RowSpan="2" Margin="0,10,10,0" SelectionChanged="market_selection_changed" >
+                    <ListView x:Name="lv_car_sale" SelectionMode="Single"  d:ItemsSource="{d:SampleData ItemCount=5}"  Grid.RowSpan="2" Margin="0,0,5,0" SelectionChanged="market_selection_changed" Grid.Row="1" >
                         <ListView.View>
                             <GridView>
 
@@ -115,21 +116,22 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <Image x:Name="img_forsalecar" Grid.Column="1"  Margin="2,10,2,0" VerticalAlignment="Top" Height="100" />
-                    <Button x:Name="b_BuyCar" Grid.Column="1" Content="Buy" IsEnabled="False" Grid.Row="1" Click="b_BuyCar_Click"/>
+                    <Image x:Name="img_forsalecar" Grid.Column="1"  Margin="2,10,2,0" VerticalAlignment="Top" Height="100" Grid.RowSpan="2" />
+                    <Button x:Name="b_BuyCar" Grid.Column="1" Content="Buy" IsEnabled="False" Grid.Row="2" Click="b_BuyCar_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Profile">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
-                        <ColumnDefinition Width="210"/>
+                        <ColumnDefinition Width="200"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="30"/>
                         <RowDefinition/>
                         <RowDefinition Height="30"/>
                     </Grid.RowDefinitions>
-                    <ListView x:Name="lv_owned_cars" SelectionMode="Single"  d:ItemsSource="{d:SampleData ItemCount=5}"  SelectionChanged="OwnedCars_SelChanged" Margin="0,10,10,0" Grid.RowSpan="2" >
+                    <ListView x:Name="lv_owned_cars" SelectionMode="Single"  d:ItemsSource="{d:SampleData ItemCount=5}"  SelectionChanged="OwnedCars_SelChanged" Margin="0,0,5,0" Grid.RowSpan="2" Grid.Row="1" >
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Width="300" DisplayMemberBinding="{Binding Name}">
@@ -146,8 +148,8 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <Image x:Name="img_OwnedCar" Grid.Column="1"  Margin="2,10,2,0" VerticalAlignment="Top" Height="100" />
-                    <Button x:Name="b_SellCar" Grid.Column="1" Content="Sell" IsEnabled="False" Grid.Row="1" Click="b_SellCar_Click"/>
+                    <Image x:Name="img_OwnedCar" Grid.Column="1"  Margin="2,10,2,0" VerticalAlignment="Top" Height="100" Grid.RowSpan="2" />
+                    <Button x:Name="b_SellCar" Grid.Column="1" Content="Sell" IsEnabled="False" Grid.Row="2" Click="b_SellCar_Click"/>
                 </Grid>
             </TabItem>
 
@@ -155,13 +157,14 @@
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
-                        <ColumnDefinition Width="210"/>
+                        <ColumnDefinition Width="200"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="30"/>
                         <RowDefinition/>
                         <RowDefinition Height="30"/>
                     </Grid.RowDefinitions>
-                    <ListView x:Name="lv_HistoryRecords"   SelectionMode="Single"  d:ItemsSource="{d:SampleData ItemCount=5}"  SelectionChanged="market_selection_changed" Margin="0,10,10,0" Grid.RowSpan="2" >
+                    <ListView x:Name="lv_HistoryRecords"   SelectionMode="Single"  d:ItemsSource="{d:SampleData ItemCount=5}"  SelectionChanged="market_selection_changed" Margin="0,0,5,0" Grid.RowSpan="2" Grid.Row="1" >
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Width="300" DisplayMemberBinding="{Binding Date}">
