--- a/AC Career Mode/FinishedRace.xaml
+++ b/AC Career Mode/FinishedRace.xaml
@@ -22,14 +22,14 @@
 
             <Label Content="Position:" Height="25" />
             <Label Content="Laps:" Height="25" />
-            <Button x:Name="b_finished" IsEnabled="False" Content="Finished" Click="b_race_finish" Height="30"/>
+            <Button x:Name="b_finished" IsEnabled="False" Content="Finished" Click="b_RaceFinish_Click" Height="30"/>
 
 
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="2" Grid.RowSpan="1">
-            <TextBox x:Name="tb_position" TextWrapping="Wrap" Height="25" TextChanged="pos_txt_changed"/>
-            <TextBox x:Name="tb_laps" TextWrapping="Wrap" Height="25" TextChanged="laps_txt_changed"/>
-            <Button x:Name="b_cancel" Content="Cancel" Grid.Column="1" Grid.Row="1" Click="b_cancel_Click" Height="30"/>
+            <TextBox x:Name="tb_position" TextWrapping="Wrap" Height="25" TextChanged="tb_Pos_Changed"/>
+            <TextBox x:Name="tb_laps" TextWrapping="Wrap" Height="25" TextChanged="tb_Laps_Changed"/>
+            <Button x:Name="b_cancel" Content="Cancel" Grid.Column="1" Grid.Row="1" Click="b_RaceCancel_Click" Height="30"/>
         </StackPanel>
 
 
